--- a/_config.yml
+++ b/_config.yml
@@ -22,6 +22,8 @@ url: 'https://stat210a.berkeley.edu'
 exclude: ["Gemfile", "Gemfile.lock", "LICENSE"]
 logo: 'resources/stat_bear.png'
 
+ga_tracking: G-B8G2041HSB
+
 # Theme settings
 remote_theme: just-the-docs/just-the-docs@v0.7.0
 color_scheme: light
